--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.1",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.1.6"
   },
